# crosscode-localization-engine

./: .clang-format  .gitignore  Cargo.toml  LICENSE  build.rs  cbindgen.toml  rust-toolchain  rustfmt.toml
.github/workflows/: ci.yaml  manual-build.yaml
etc/: notes.zsh  weblate_activity_stats.py
ffi/: crosslocale.h  sample_client.py
mod-tools/: crosslocale-mod-tools.py  pyproject.toml  setup.cfg  setup.py
mod-tools/src/crosslocale/: __init__.py  archives.py  cli.py  gettext_po.py  http_client.py  mod_tools.py  utils.py
node-bindings/: README.md  addon.cc  binding.gyp  lib.d.ts  lib.js  package-lock.json  package.json  test.js
node-bindings/scripts/: normalize-path.js  prepare_rust_dylib.py  symlink.js
scripts/: generate-ffi-headers.sh  perf-record.sh  perf-report.sh
src/: backend.rs  cc_ru_compat.rs  cli.rs  create_project.rs  crosscode_markup.rs  export.rs  ffi.rs  gettext_po.rs  impl_prelude.rs  lib.rs  localize_me.rs  logging.rs  macros.rs  main.rs  parse_po.rs  progress.rs  project.rs  rc_string.rs  scan.rs  utils.rs
src/backend/: error.rs  handlers.rs  transports.rs
src/cli/: backend.rs  completions.rs  convert.rs  create_project.rs  dump_common.rs  dump_project.rs  dump_scan.rs  export.rs  import.rs  mass_json_format.rs  parse_po.rs  scan.rs  status.rs
src/gettext_po/: lexer.rs  parser.rs
src/project/: exporters.rs  importers.rs  splitters.rs  splitting_strategies.rs
src/scan/: database.rs  db.rs  fragment_descriptions.rs  json_file_finder.rs  lang_label_extractor.rs
src/utils/: json.rs  parsing.rs  serde.rs
terminal-size/: Cargo.toml
terminal-size/src/: lib.rs
