[package]
edition = "2018"
publish = false
name = "crosscode-localization-engine"
version = "0.0.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
license = "MIT"
repository = "https://github.com/dmitmel/crosscode-localization-engine.git"
homepage = "https://github.com/dmitmel/crosscode-localization-engine"

[[bin]]
name = "crosslocale"
path = "src/main.rs"

[lib]
name = "crosslocale"
# To compile the project in such a way that the main executable is linked
# dynamically to the library use RUSTFLAGS="-C prefer-dynamic". Note that the
# resulting dylib can still be linked to from C.
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
simd-json = { version = "0.3.23", optional = true }
env_logger = { version = "0.8.2", default-features = false, features = ["termcolor", "atty", "humantime"] }
log = { version = "0.4.11" }
clap = { version = "3.0.0-beta.2", default-features = false, features = ["color", "std"] }
clap_generate = { version = "3.0.0-beta.2" }
anyhow = { version = "1.0.38" }
walkdir = { version = "2.3.1" }
indexmap = { version = "1.6.1", features = ["serde-1"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
once_cell = { version = "1.5.2" }
time = { version = "0.2.25" }
# textwrap = { version = "0.11.0" }
atty = { version = "0.2.14" }
threadpool = "1.8.1"
linkme = "0.2.5"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processenv", "winbase", "wincon", "winnt"] }

[features]
clap_debug = ["clap/debug", "clap_generate/debug"]
