[package]
edition = "2018"
publish = false
name = "crosscode-localization-engine"
version = "0.0.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
license = "MIT"
repository = "https://github.com/dmitmel/crosscode-localization-engine.git"
homepage = "https://github.com/dmitmel/crosscode-localization-engine"

[workspace]

[[bin]]
name = "crosslocale"
path = "src/main.rs"

[lib]
name = "crosslocale"
# To compile the project in such a way that the main executable is linked
# dynamically to the library use RUSTFLAGS="-C prefer-dynamic". Note that the
# resulting dylib can still be linked to from C.
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_json = { version = "1.0.61", features = ["preserve_order", "raw_value"] }
simd-json = { version = "0.7.0", optional = true }
env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }
log = { version = "0.4.11" }
clap = { version = "4.0.26", default-features = false, features = ["std", "color", "help", "wrap_help", "usage", "error-context", "deprecated"] }
clap_complete = { version = "4.0.5" }
anyhow = { version = "1.0.38" }
walkdir = { version = "2.3.1" }
indexmap = { version = "1.6.1", features = ["serde-1"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
once_cell = { version = "1.5.2" }
time = { version = "0.2.27" }
# textwrap = { version = "0.11.0" }
atty = { version = "0.2.14" }
threadpool = { version = "1.8.1" }
serde-transcode = { version = "1.1.1" }
terminal_size = "0.2.2"

[patch.crates-io]
terminal_size = { path = "./terminal-size" }

[features]
clap_debug = ["clap/debug", "clap_complete/debug"]
