[metadata]
name = crosslocale-mod-tools
version = attr:crosslocale.__version__
license = MIT
url = https://github.com/dmitmel/crosscode-localization-engine

[options]
python_requires = >=3.7
packages=find:
package_dir=
  =src
include-package-data = True

[options.extras_require]
progress-bars = tqdm

[options.packages.find]
where=src

[options.package_data]
crosslocale = py.typed

[options.entry_points]
console_scripts =
  crosslocale-mod-tools = crosslocale.mod_tools:run_main
